# goit-pythonweb-hw-06

./: .env.example  README.md  alembic.ini  database.py  docker-compose.yml  models.py  my_select.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: e03697ebd2a4_initial_tables.py
