[tool.poetry]
name = "goit-pythonweb-hw-06"
version = "0.1.0"
description = "Database project with PostgreSQL, SQLAlchemy and Docker"
authors = ["Roman Kukla <kukla.roman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.7"
faker = "^19.12.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3 